examples are in card format

--- a/content/data/digilocker/quickstart.mdx
+++ b/content/data/digilocker/quickstart.mdx
@@ -136,65 +136,76 @@ It will also be used by Setu to send back relevant information about a request. 
           label: "400",
           content: (
             <>
-              <p>
-                <Badge type="failure">BAD REQUEST</Badge> The{" "}
-                <code>redirectUrl</code> provided is not valid.
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/digilocker/ 
+              <>
+                <Text size="small" weight="600">
+                  Type 1
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                      <Badge type="failure">BAD REQUEST</Badge> The{" "}
+                      <code>redirectUrl</code> provided is not valid.
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`POST /api/digilocker/ 
  
 { 
-    "redirectUrl": "https://.co" 
+   "redirectUrl": "https://.co" 
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`{ 
     "error": { 
         "code": "invalid_redirect_url", 
         "detail": "Please enter a valid redirect URL.", 
         "traceId": "" 
     } 
-} `}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "3",
-          label: "400",
-          content: (
-            <>
-              <p>
-                <Badge type="failure">BAD REQUEST</Badge> invalid payload
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/digilocker/ 
+}`}
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </> 
+              <>
+                <Text size="small" weight="600">
+                  Type 2
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                     <Badge type="failure">BAD REQUEST</Badge> invalid payload
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`POST /api/digilocker/ 
  
 { 
+   "redirectUrl": "https://.co" 
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`{ 
     "error": {
         "code": "invalid_payload",
         "detail": "redirect url for the user",
         "traceId": ""
     }
-} `}
-              </CodeBlockWithCopy>
+}`}
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </>  
             </>
           ),
         },
         {
-          key: "5",
+          key: "4",
           label: "500",
           content: (
             <>
@@ -645,18 +656,24 @@ Call this API to fetch document of a user from DigiLocker.
           label: "400",
           content: (
             <>
-              <p>
-                <Badge type="failure">BAD REQUEST</Badge> Your request has an
+              <>
+                <Text size="small" weight="600">
+                  Type 1
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                     <Badge type="failure">BAD REQUEST</Badge> Your request has an
                 invalid payload.
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <p>
-                The key-value pair for <code>MemberName</code> and its value are
-                missing in this example JSON body.
-              </p>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/digilocker/:id/document 
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                     <p>
+                      The key-value pair for <code>MemberName</code> and its value are
+                      missing in this example JSON body.
+                    </p>
+                    <CodeBlockWithCopy language="json">
+                      {`POST /api/digilocker/:id/document 
  
 { 
     "docType": "PRFND", 
@@ -668,34 +685,35 @@ Call this API to fetch document of a user from DigiLocker.
         "value": "98432234234" 
     }] 
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`{ 
     "error": { 
         "code": "invalid_payload", 
         "detail": "Missing required parameter in the JSON body", 
         "traceId": "" 
     } 
-} `}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "3",
-          label: "400",
-          content: (
-            <>
-              <p>
-                <Badge type="failure">BAD REQUEST</Badge> User consent is not
+}`}
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </> 
+              <>
+                <Text size="small" weight="600">
+                  Type 2
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                    <Badge type="failure">BAD REQUEST</Badge> User consent is not
                 available
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/digilocker/:id/document 
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`POST /api/digilocker/:id/document 
  
 { 
     "docType": "PRFND", 
@@ -711,36 +729,37 @@ Call this API to fetch document of a user from DigiLocker.
         "value": "Ramesh" 
     }] 
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`{ 
     "error": { 
         "code": "consent_not_given", 
         "detail": "Only accepted value for consent is Y", 
         "traceId": "" 
     } 
 } `}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "4",
-          label: "400",
-          content: (
-            <>
-               <p>
-                <Badge type="failure">BAD REQUEST</Badge> Aadhaar not linked to mobile number.
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <p>
-                Pass the DigiLocker request <code>id</code> as a URL parameter
-              </p>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/digilocker/:id/document 
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </> 
+              <>
+                <Text size="small" weight="600">
+                  Type 3
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                      <Badge type="failure">BAD REQUEST</Badge> Aadhaar not linked to mobile number.
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <p>
+                      Pass the DigiLocker request <code>id</code> as a URL parameter
+                    </p>
+                    <CodeBlockWithCopy language="json">
+                      {`POST /api/digilocker/:id/document 
 { 
     "docType": "PRFND", 
     "orgId": "002317", 
@@ -755,64 +774,26 @@ Call this API to fetch document of a user from DigiLocker.
         "value": "Ramesh" 
     }] 
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                      {`{ 
     "error": { 
         "code": "aadhaar_not_linked", 
         "detail": "The user has not linked his Aadhaar card with Digilocker account.", 
         "traceId": "" 
     } 
 } `}
-              </CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </> 
             </>
           ),
         },
         {
-          key: "5",
-          label: "401",
-          content: (
-            <>
-              <p>
-                <Badge type="failure">UNAUTHORIZED</Badge> User is not authenticated to access this resource
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/digilocker/:id/document 
-{ 
-    "docType": "PRFND", 
-    "orgId": "002317", 
-    "format": "pdf", 
-    "consent": "Y", 
-    "parameters": [ { 
-        "name": "AC_NO", 
-        "value": "98432234234" 
-    }, 
-    { 
-        "name": "MemberName", 
-        "value": "Ramesh" 
-    }] 
-} `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-               <CodeBlockWithCopy language="json">
-                {`{
-    "error": {
-        "code": "user_not_authenticated",
-        "detail": "User is not authenticated to access this resource",
-        "traceId": ""
-    }
-}`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "6",
+          key: "3",
           label: "401",
           content: (
             <>
@@ -855,7 +836,7 @@ Call this API to fetch document of a user from DigiLocker.
           ),
         },
         {
-          key: "7",
+          key: "4",
           label: "404",
           content: (
             <>
@@ -896,7 +877,7 @@ Call this API to fetch document of a user from DigiLocker.
           ),
         },
         {
-          key: "8",
+          key: "5",
           label: "500",
           content: (
             <>
@@ -1053,64 +1034,74 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
             </>
           ),
         },
-         {
-          key: "3",
+        {
+          key: "4",
           label: "401",
           content: (
             <>
-              <p>
-                <Badge type="failure">UNAUTHORIZED</Badge> User is not authenticated to access this resource
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <p>
-                Pass the DigiLocker request <code>id</code> as a URL parameter
-              </p>
-              <CodeBlockWithCopy language="json">
-                {`GET /api/digilocker/:id/aadhaar`}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{
+             <>
+                <Text size="small" weight="600">
+                  Type 1
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                     <Badge type="failure">UNAUTHORIZED</Badge> User is not authenticated to access this resource
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <p>
+                      Pass the DigiLocker request <code>id</code> as a URL parameter
+                    </p>
+                    <CodeBlockWithCopy language="json">
+                     {`GET /api/digilocker/:id/aadhaar `}
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                     {`{
     "error": {
         "code": "user_not_authenticated",
         "detail": "User is not authenticated to access this resource",
         "traceId": ""
     }
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "4",
-          label: "401",
-          content: (
-            <>
-              <p>
-                <Badge type="failure">UNAUTHORIZED</Badge> User token has been
-                revoked. Generate a fresh DigiLocker request.
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <p>
-                Provide the DigiLocker request <code>id</code> in the request—
-              </p>
-              <CodeBlockWithCopy language="json">
-                {`GET /api/digilocker/:id/aadhaar `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </>
+              <>
+                <Text size="small" weight="600">
+                  Type 2
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                    <Badge type="failure">UNAUTHORIZED</Badge> User token has been
+                revoked
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <p>
+                      Provide the DigiLocker request <code>id</code> in the request—
+                    </p>
+                    <CodeBlockWithCopy language="json">
+                     {`GET /api/digilocker/:id/aadhaar `}
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                     {`{ 
     "error": { 
         "code": "token_revoked", 
         "detail": "The user has revoked the token for the given request.", 
         "traceId": "" 
     } 
 } `}
-              </CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </> 
             </>
           ),
         },
@@ -1149,58 +1140,68 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
           label: "500",
           content: (
             <>
-              <p>
-                <Badge type="failure">INTERNAL SERVER ERROR</Badge> Failed to get user's Aadhaar XML.
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <p>
-                Provide the DigiLocker request <code>id</code> in the request—
-              </p>
-              <CodeBlockWithCopy language="json">
-                {`GET /api/digilocker/:id/aadhaar `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+             <>
+                <Text size="small" weight="600">
+                  Type 1
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                     <Badge type="failure">INTERNAL SERVER ERROR</Badge> Failed to get user's Aadhaar XML.
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <p>
+                       Provide the DigiLocker request <code>id</code> in the request—
+                    </p>
+                    <CodeBlockWithCopy language="json">
+                     {`GET /api/digilocker/:id/aadhaar `}
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                   {`{ 
     "error": { 
         "code": "get_xml_failed", 
         "detail": "Failed to get user's Aadhaar XML.", 
         "traceId": "" 
     } 
 } `}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-         {
-          key: "7",
-          label: "500",
-          content: (
-            <>
-             <p>
-                <Badge type="failure">INTERNAL SERVER ERROR</Badge> Upstream service failure or Error while processing request
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <p>
-                Provide the DigiLocker request <code>id</code> in the request—
-              </p>
-              <CodeBlockWithCopy language="json">
-                {`GET /api/digilocker/:id/aadhaar `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{ 
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </>
+             <>
+                <Text size="small" weight="600">
+                  Type 2
+                </Text>
+                <Card padding="nano" shape="rounded" marginBottom="micro">
+                  <details>
+                    <summary>
+                      <Badge type="failure">INTERNAL SERVER ERROR</Badge> Upstream service failure or Error while processing request
+                    </summary>
+                    <hr className="tertiary" />
+                    <h5>Request</h5>
+                    <p>
+                      Provide the DigiLocker request <code>id</code> in the request—
+                    </p>
+                    <CodeBlockWithCopy language="json">
+                     {`GET /api/digilocker/:id/aadhaar `}
+                    </CodeBlockWithCopy>
+                    <hr className="tertiary" />
+                    <h5>Response</h5>
+                    <CodeBlockWithCopy language="json">
+                  {`{ 
     "error": { 
         "code": "internal_server_error",
         "detail": "Upstream service failure", // Or, "Error while processing request"
         "traceId": ""
     } 
 } `}
-              </CodeBlockWithCopy>
+                    </CodeBlockWithCopy>
+                  </details>
+                </Card>
+              </>
             </>
           ),
         },
