fixed invalid vpa type

--- a/content/data/bav/validate-vpa/quickstart.mdx
+++ b/content/data/bav/validate-vpa/quickstart.mdx
@@ -109,7 +109,7 @@ Here are the URLs you would need for this integration—
                 <Card padding="nano" shape="rounded" marginBottom="micro">
                   <details>
                     <summary>
-                      <Badge type="success">SUCCESS</Badge> Setu has processed
+                      <Badge type="failure">ERROR</Badge> Setu has processed
                       your request successfully but the request has an invalid{" "}
                       <code>VPA</code>.
                     </summary>
