Add validate VPA entry

--- a/content/data/bav/validate-vpa/quickstart.mdx
+++ b/content/data/bav/validate-vpa/quickstart.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Quickstart
 page_title: Quickstart for Validate UPI VPA
 order: 1
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Validate UPI VPA
@@ -11,50 +11,59 @@ The following guide describes a sync API implementation for validating UPI VPA.
 
 Here are the URLs you would need for this integration—
 
-- Sandbox—`https://dg-sandbox.setu.co`
-- Production—`https://dg.setu.co`
-- Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
-  - `x-client-id`
-  - `x-client-secret`
+-   Sandbox—`https://dg-sandbox.setu.co`
+-   Production—`https://dg.setu.co`
+-   Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
+    -   `x-client-id`
+    -   `x-client-secret`
 
 <hr class="primary" />
 
 ### Validate VPA
 
 <Row>
-  <Portion desktopSpan="whole">
-    <Tabs
-      tabs={[
-        {
-          key: "1",
-          label: "200",
-          content: (
-            <>
-              <>
-                <Text size="small" weight="600">
-                  Valid VPA
-                </Text>
-                <Card padding="nano" shape="rounded" marginBottom="micro">
-                  <details>
-                    <summary>
-                      <Badge type="success">SUCCESS</Badge> Your request has a
-                      valid <code>VPA</code> and Setu has processed your request
-                      successfully.
-                    </summary>
-                    <hr className="tertiary" />
-                    <h5>Request</h5>
-                    <CodeBlockWithCopy language="json">
-                      {`POST  /api/verify/ban/validate_vpa
+    <Portion desktopSpan="whole">
+        <Tabs
+            tabs={[
+                {
+                    key: "1",
+                    label: "200",
+                    content: (
+                        <>
+                            <>
+                                <Text size="small" weight="600">
+                                    Valid VPA
+                                </Text>
+                                <Card
+                                    padding="nano"
+                                    shape="rounded"
+                                    marginBottom="micro"
+                                >
+                                    <details>
+                                        <summary>
+                                            <Badge type="success">
+                                                SUCCESS
+                                            </Badge>{" "}
+                                            Your request has a valid{" "}
+                                            <code>VPA</code> and Setu has
+                                            processed your request successfully.
+                                        </summary>
+                                        <hr className="tertiary" />
+                                        <h5>Request</h5>
+                                        <CodeBlockWithCopy language="json">
+                                            {`POST  /api/verify/ban/validate_vpa
  
 { 
   "vpa": "user1@icici"
 } `}
-                    </CodeBlockWithCopy>
-                    <hr className="tertiary" />
-                    <h5>Response</h5>
-                    <p>You will get the following details—</p>
-                    <CodeBlockWithCopy language="json">
-                      {`{
+                                        </CodeBlockWithCopy>
+                                        <hr className="tertiary" />
+                                        <h5>Response</h5>
+                                        <p>
+                                            You will get the following details—
+                                        </p>
+                                        <CodeBlockWithCopy language="json">
+                                            {`{
     "status": "SUCCESS",
     "data": {
         "vpa": "user1@icici",
@@ -98,110 +107,121 @@ Here are the URLs you would need for this integration—
     },
     "traceId": "4c93e6bb-8017-4fc4-b44b-4cf186c9c6d5",
 }`}
-                    </CodeBlockWithCopy>
-                  </details>
-                </Card>
-              </>
-              <>
-                <Text size="small" weight="600">
-                  Invalid VPA
-                </Text>
-                <Card padding="nano" shape="rounded" marginBottom="micro">
-                  <details>
-                    <summary>
-                      <Badge type="failure">ERROR</Badge> Setu has processed
-                      your request successfully but the request has an invalid{" "}
-                      <code>VPA</code>.
-                    </summary>
-                    <hr className="tertiary" />
-                    <h5>Request</h5>
-                    <CodeBlockWithCopy language="json">
-                      {`POST  /api/verify/ban/validate_vpa
+                                        </CodeBlockWithCopy>
+                                    </details>
+                                </Card>
+                            </>
+                            <>
+                                <Text size="small" weight="600">
+                                    Invalid VPA
+                                </Text>
+                                <Card
+                                    padding="nano"
+                                    shape="rounded"
+                                    marginBottom="micro"
+                                >
+                                    <details>
+                                        <summary>
+                                            <Badge type="failure">ERROR</Badge>{" "}
+                                            Setu has processed your request
+                                            successfully but the request has an
+                                            invalid <code>VPA</code>.
+                                        </summary>
+                                        <hr className="tertiary" />
+                                        <h5>Request</h5>
+                                        <CodeBlockWithCopy language="json">
+                                            {`POST  /api/verify/ban/validate_vpa
  
 { 
   "vpa": "random@icici"
 } `}
-                    </CodeBlockWithCopy>
-                    <hr className="tertiary" />
-                    <h5>Response</h5>
-                    <p>You will get the following details—</p>
-                    <CodeBlockWithCopy language="json">
-                      {`{
+                                        </CodeBlockWithCopy>
+                                        <hr className="tertiary" />
+                                        <h5>Response</h5>
+                                        <p>
+                                            You will get the following details—
+                                        </p>
+                                        <CodeBlockWithCopy language="json">
+                                            {`{
     "status": "ERROR",
     "message": "Invalid virtual address",
     "traceId": "061b26e1-cb3c-4373-a761-ad03d6251f04"
 }`}
-                    </CodeBlockWithCopy>
-                  </details>
-                </Card>
-              </>
-            </>
-          ),
-        },
-        {
-          key: "2",
-          label: "400",
-          content: (
-            <>
-              <p>
-                <Badge type="failure">BAD REQUEST</Badge> Your request contents
-                invalid <code>VPA</code> format
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST  /api/verify/ban/validate_vpa
+                                        </CodeBlockWithCopy>
+                                    </details>
+                                </Card>
+                            </>
+                        </>
+                    ),
+                },
+                {
+                    key: "2",
+                    label: "400",
+                    content: (
+                        <>
+                            <p>
+                                <Badge type="failure">BAD REQUEST</Badge> Your
+                                request contents invalid <code>VPA</code> format
+                            </p>
+                            <hr className="tertiary" />
+                            <h5>Request</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`POST  /api/verify/ban/validate_vpa
  
 {
     "vpa": "user__icici"
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{
+                            </CodeBlockWithCopy>
+                            <hr className="tertiary" />
+                            <h5>Response</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`{
     "error": {
         "code": "bad_request",
         "detail": "invalid vpa format",
         "traceId": "d13fb707-e8ce-4a92-aa10-3194b1e2f7b5"
     }
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-        {
-          key: "3",
-          label: "500",
-          content: (
-            <>
-              <p>
-                <Badge type="failure">INTERNAL SERVER ERROR</Badge> Setu’s system has failed to process your request due to some internal error or upstream error.
-              </p>
-              <hr className="tertiary" />
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST  /api/verify/ban/validate_vpa
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+                {
+                    key: "3",
+                    label: "500",
+                    content: (
+                        <>
+                            <p>
+                                <Badge type="failure">
+                                    INTERNAL SERVER ERROR
+                                </Badge>{" "}
+                                Setu’s system has failed to process your request
+                                due to some internal error or upstream error.
+                            </p>
+                            <hr className="tertiary" />
+                            <h5>Request</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`POST  /api/verify/ban/validate_vpa
  
 {
     "vpa": "user1@icici"
 } `}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <CodeBlockWithCopy language="json">
-                {`{
+                            </CodeBlockWithCopy>
+                            <hr className="tertiary" />
+                            <h5>Response</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`{
     "error": {
         "code": "upstream_service_error", // or, internal_server_error
         "detail": "Upstream service error. Please reach out to support along with the traceId.",
         "traceId": "0b0a2546-383c-4f32-9d72-abaaf69b9e0c"
     }
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-      ]}
-    ></Tabs>
-  </Portion>
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+            ]}
+        ></Tabs>
+    </Portion>
 </Row>
