Add collection failure event

--- a/content/payments/billpay/pre-built-screens/user-events.mdx
+++ b/content/payments/billpay/pre-built-screens/user-events.mdx
@@ -49,6 +49,7 @@ The following events are supported in the bill payment journey—
 - `bill_fetch_failure`
 - `bill_payment_success`
 - `bill_payment_failure`
+- `bill_collection_failure`
 - `bill_payment_refunded`
 - `dispute_raised`
 - `dispute_status_change`
@@ -149,8 +150,30 @@ Here are some sample payloads for the listed events. Note that we may add additi
   "billAmount": "105.0",
   "dueDate": "2021-05-23",
   "amountPaid": "601.00",
-  "orderId": "H001234566666",
   "event": "bill_payment_failure"
+}`}
+</CodeBlockWithCopy>
+
+<br />
+
+`bill_collection_failure`
+
+<CodeBlockWithCopy language="json">
+  {`{
+  "txnId": null,
+  "mobileNumber": "9481773053",
+  "status": "COLLECTION_FAILURE",
+  "billId": "dfeeaf14-e43a-4196-90d0-41089e979ad5",
+  "billerId": "MAHI00000NATIC",
+  "billerName": "Mahindra Rural Housing Finance Ltd",
+  "billerCategory": "Loan-Repayment",
+  "customerId": "9CBV4C9MSURWXRM54Q3DY8WEE",
+  "billAmount": "105.0",
+  "dueDate": "2021-05-23",
+  "sessionId": "7f6de02a-0061-403f-bd65-47d4b5f72c87",
+  "amountPaid": 601.00,
+  "amount": null,
+  "event": "bill_collection_failure"
 }`}
 </CodeBlockWithCopy>
 
