Sample for Validate VPA

--- a/content/data/bav/validate-vpa/quickstart.mdx
+++ b/content/data/bav/validate-vpa/quickstart.mdx
@@ -21,6 +21,17 @@ Here are the URLs you would need for this integration—
 
 ### Validate VPA
 
+<Callout type="tip">
+    While testing on Sandbox, you may use sample values to mimic real-life
+    scenarios. Use the below values to get specific responses from the{" "}
+    <strong>Validate VPA API</strong> API.{" "}
+
+- **individual@setu**—Valid individual's VPA
+- **merchant@setu**—Valid merchant's VPA
+- **xyz@setu**— Invalid VPA
+
+</Callout>   
+
 <Row>
     <Portion desktopSpan="whole">
         <Tabs
@@ -33,7 +44,7 @@ Here are the URLs you would need for this integration—
                             <>
                                 <Text size="small" weight="600">
                                     Valid VPA
-                                </Text>
+                                </Text>            
                                 <Card
                                     padding="nano"
                                     shape="rounded"
